--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@testing-library/user-event": "^13.5.0",
     "@truffle/contract": "^4.4.4",
     "antd": "^4.18.3",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
+    "ethers": "^5.5.4",
     "moralis": "^1.2.6",
     "nft.storage": "^5.2.0",
     "react": "^17.0.2",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.7.0",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "6",
     "react-scripts": "^4.0.3",
+    "react-signature-canvas": "^1.0.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
